# CapitalGuard_Pro_v2

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Action_Plan_and_Analysis_Report.md  Dockerfile  Dockerfile.api  Dockerfile.bot  Dockerfile.watcher  Makefile  README.md  ROADMAP.md  RUNBOOK.md  docker-compose.yml  entrypoint.sh  initial_analysis.md  pyproject.toml  requirements.txt  start-all.sh  supervisord.conf
.github/workflows/: ci.yml
ai_service/: Dockerfile  database.py  main.py  models.py  requirements.txt  schemas.py
ai_service/services/: image_parser.py  llm_parser.py  parsing_manager.py  parsing_utils.py  regex_parser.py
alembic/: README  env.py
alembic/versions/: 20250825_add_exit_price_closed_at.py  20250828_change_user_id_to_string.py  20250829_01_add_market_and_notes_to_recs.py  20250829_add_message_meta.py  202509010_1_create_piblished_datae.py  202509010_1_create_tran_rec.py  202509011__create_recommendation_events.py  20250903_add_order_type.py  20250903_add_recommendation_lifecycle.py  20250903_fix_created_updated_defaults.py  20250903_hotfix_created_updated_defaults.py  20250903_set_defaults_for_timestamps.py   20250904_repair_chain_and_set_timestamp_defaults.py  20250905_01_add_user_foundation.py  20250905_add_alert_meta_to_recs.py  20250909_create_channels_table.py  (+29 more)
config/: supervisord.conf
scripts/: dev_api.sh  migrate.sh  runapi.sh  runbot.sh  runwatcher.sh
tests/: __init__.py  conftest.py  test_api.py  test_domain.py  test_integration_flow.py  test_parsing.py  test_services.py  test_trade_service.py
watcher/: Dockerfile
(+100 files in other folders)
